--- a/articles/cognitive-services/personalizer/toc.yml
+++ b/articles/cognitive-services/personalizer/toc.yml
@@ -62,12 +62,20 @@
       href: 'https://go.microsoft.com/fwlink/?linkid=2092082'
     - name: SDK's
       items:
-        - name: .NET SDK-referentie
-          href: 'https://go.microsoft.com/fwlink/?linkid=2092353'
-        - name: NuGet-pakket
-          href: 'https://go.microsoft.com/fwlink/?linkid=2092272'
+        - name: .NET
+          items:
+            - name: .NET SDK-referentie
+              href: 'https://go.microsoft.com/fwlink/?linkid=2092353'
+            - name: NuGet-pakket
+              href: 'https://go.microsoft.com/fwlink/?linkid=2092272'
+        - name: Python
+          items:
+            - name: Pypi-pakket
+              href: 'https://pypi.org/project/azure-cognitiveservices-personalizer/'
 - name: Resources
   items:
+    - name: Problemen oplossen
+      href: troubleshooting.md
     - name: Regionale beschikbaarheid
       href: 'https://azure.microsoft.com/global-infrastructure/services/?products=cognitive-services'
     - name: Naleving
