--- a/articles/digital-twins/TOC.yml
+++ b/articles/digital-twins/TOC.yml
@@ -66,6 +66,8 @@
           href: how-to-navigate-apis.md
         - name: Veelvoorkomende querypatronen
           href: how-to-query-common-apis.md
+    - name: Uw app bij een verouderde AAD registreren
+      href: how-to-use-legacy-aad.md
 - name: Naslaginformatie
   items:
     - name: Bibliotheek met door de gebruiker gedefinieerde functies
