--- a/articles/digital-twins/index.yml
+++ b/articles/digital-twins/index.yml
@@ -1,8 +1,8 @@
 ### YamlMime:YamlDocument
 documentType: LandingData
-title: Documentatie voor Azure Digital Twins
+title: Documentatie voor de preview van Azure Digital Twins
 metadata:
-  title: 'Documentatie voor Azure Digital Twins - zelfstudies, API-verwijzing | Microsoft Docs'
+  title: 'Documentatie voor de preview van Azure Digital Twins - zelfstudies, API-verwijzing | Microsoft Docs'
   description: Met Azure Digital Twins kunt u slimme ruimtelijke oplossingen maken.
   author: dsk-2015
   manager: timlt
