--- a/articles/governance/blueprints/toc.yml
+++ b/articles/governance/blueprints/toc.yml
@@ -49,11 +49,33 @@
         - name: Implementatiestappen
           displayName: 'standards, iso, 27001'
           href: ./samples/iso27001-ase-sql-workload/deploy.md
-    - name: UK OFFICIAL
+    - name: NIST SP 800-53 Rev 4
       items:
         - name: Toewijzing van beheeropties
-          displayName: 'standards, uk official'
+          displayName: 'standards, nist, 800-53'
+          href: ./samples/nist-sp-800-53-rev4/control-mapping.md
+    - name: PCI-DSS v3.2.1
+      items:
+        - name: Overzicht
+          displayName: 'standards, Payment Card Industry Data Security Standard'
+          href: ./samples/pci-dss-3.2.1/index.md
+        - name: Toewijzing van beheeropties
+          displayName: 'standards, Payment Card Industry Data Security Standard'
+          href: ./samples/pci-dss-3.2.1/control-mapping.md
+        - name: Implementatiestappen
+          displayName: 'standards, Payment Card Industry Data Security Standard'
+          href: ./samples/pci-dss-3.2.1/deploy.md
+    - name: UK OFFICIAL en UK NHS
+      items:
+        - name: Overzicht
+          displayName: 'standards, uk official, uk nhs'
+          href: ./samples/ukofficial/index.md
+        - name: Toewijzing van beheeropties
+          displayName: 'standards, uk official, uk nhs'
           href: ./samples/ukofficial/control-mapping.md
+        - name: Implementatiestappen
+          displayName: 'standards, uk official, uk nhs'
+          href: ./samples/ukofficial/deploy.md
 - name: Concepten
   items:
     - name: Levenscyclus van een blauwdruk
