--- a/articles/hdinsight/hbase/TOC.yml
+++ b/articles/hdinsight/hbase/TOC.yml
@@ -11,16 +11,16 @@
       href: apache-hbase-phoenix-squirrel-linux.md
     - name: Query uitvoeren op Apache HBase - HBase-Shell
       href: ./query-hbase-with-hbase-shell.md
-- name: Aan de slag
+- name: Zelfstudies
   items:
-    - name: Beginnen met Apache HBase en NoSQL
+    - name: Apache HBase in HDInsight gebruiken
       href: apache-hbase-tutorial-get-started-linux.md
+- name: Concepten
+  items:
     - name: HDInsight-apps installeren
       href: ../hdinsight-apps-install-applications.md
     - name: Planning clustercapaciteit
       href: ../hdinsight-capacity-planning.md
-- name: Concepten
-  items:
     - name: Apache Hadoop-onderdelen in HDInsight
       href: ../hdinsight-component-versioning.md
     - name: HDInsight 4.0
