--- a/articles/hdinsight/r-server/TOC.yml
+++ b/articles/hdinsight/r-server/TOC.yml
@@ -4,16 +4,23 @@
   items:
     - name: Wat is ML Services in HDInsight?
       href: r-server-overview.md
-- name: Aan de slag
+- name: Snelstartgidsen
+  expanded: true
   items:
-    - name: Aan de slag met ML Services
-      href: r-server-get-started.md
+    - name: Voorbeeldtaak - RStudio Server
+      href: ./machine-learning-services-quickstart-job-rstudio.md
+    - name: Voorbeeldtaak - R-console
+      href: ./machine-learning-services-quickstart-job-rconsole.md
+- name: Zelfstudies
+  items:
+    - name: R in een Spark-compute-context in HDInsight
+      href: ml-services-tutorial-spark-compute.md
+- name: Concepten
+  items:
     - name: HDInsight-apps installeren
       href: ../hdinsight-apps-install-applications.md
     - name: Planning clustercapaciteit
       href: ../hdinsight-capacity-planning.md
-- name: Concepten
-  items:
     - name: Apache Hadoop-onderdelen in HDInsight
       href: ../hdinsight-component-versioning.md
     - name: HDInsight 4.0
@@ -56,8 +63,6 @@
           href: ../hdinsight-hadoop-customize-cluster-linux.md
         - name: Scriptacties ontwikkelen
           href: ../hdinsight-hadoop-script-actions-linux.md
-        - name: Presto installeren en gebruiken
-          href: ../hdinsight-hadoop-install-presto.md
         - name: Apache Hive-bibliotheken toevoegen
           href: ../hdinsight-hadoop-add-hive-libraries.md
         - name: Apache Giraph gebruiken
