--- a/articles/virtual-machines/windows/toc.yml
+++ b/articles/virtual-machines/windows/toc.yml
@@ -267,13 +267,13 @@
           items:
             - name: Overzicht
               href: ../linux/image-builder-overview.md?toc=%2fazure%2fvirtual-machines%2fwindows%2ftoc.json
-            - name: CLI gebruiken
+            - name: Azure CLI gebruiken
               href: image-builder.md
-            - name: Gebruiken met galerieën
+            - name: Compileren voor installatiekopiegalerieën
               href: image-builder-gallery.md
-            - name: De versie van een installatiekopie bijwerken
+            - name: Een bestaande installatiekopie bijwerken
               href: image-builder-gallery-update-image-version.md
-            - name: Scripts gebruiken in Azure Storage
+            - name: Scripts opslaan
               href: ../linux/image-builder-user-assigned-identity.md?toc=%2fazure%2fvirtual-machines%2fwindows%2ftoc.json
             - name: Sjabloonverwijzing
               href: ../linux/image-builder-json.md?toc=%2fazure%2fvirtual-machines%2fwindows%2ftoc.json
