--- a/articles/active-directory/devices/TOC.yml
+++ b/articles/active-directory/devices/TOC.yml
@@ -18,8 +18,14 @@
     - name: Azure AD-deelname configureren tijdens eerste sessie in Windows 10
       href: azuread-joined-devices-frx.md
 - name: Concepten
-  expanded: false
+  expanded: true
   items:
+    - name: Azure AD-geregistreerde apparaten
+      href: concept-azure-ad-register.md
+    - name: Azure AD-gekoppelde apparaten
+      href: concept-azure-ad-join.md
+    - name: Hybride Azure AD-gekoppelde apparaten
+      href: concept-azure-ad-join-hybrid.md
     - name: Eenmalige aanmelding voor on-premises resources
       href: azuread-join-sso.md
     - name: Primaire vernieuwingstokens
@@ -27,34 +33,38 @@
     - name: Beheerde Azure-werkstations
       href: concept-azure-managed-workstation.md
 - name: Handleidingen
-  expanded: true
+  expanded: false
   items:
-    - name: Apparaatidentiteit beheren
-      href: device-management-azure-portal.md
-    - name: Verlopen apparaten beheren
-      href: manage-stale-devices.md
     - name: Uw implementatie van Azure AD-deelname plannen
       href: azureadjoin-plan.md
+    - name: Lokale beheerders toewijzen aan apparaten die zijn gekoppeld aan Azure AD
+      href: assign-local-admin.md
     - name: Uw implementatie van hybride Azure AD-deelname plannen
       href: hybrid-azuread-join-plan.md
     - name: Gecontroleerde validatie van hybride Azure AD-deelname
       href: hybrid-azuread-join-control.md
-    - name: Lokale beheerders toewijzen aan apparaten die zijn gekoppeld aan Azure AD
-      href: assign-local-admin.md
+    - name: Apparaatidentiteit beheren
+      href: device-management-azure-portal.md
+    - name: Verlopen apparaten beheren
+      href: manage-stale-devices.md
     - name: Enterprise State Roaming inschakelen
       href: enterprise-state-roaming-enable.md
     - name: Beheerde Azure-werkstations implementeren
       href: howto-azure-managed-workstation.md
-    - name: Problemen oplossen met apparaten die deel uitmaken van een hybride Azure AD en werken met de huidige versie van Windows
-      href: troubleshoot-hybrid-join-windows-current.md
-    - name: Problemen oplossen met apparaten die deel uitmaken van een hybride Azure AD en werken met een oude versie van Windows
-      href: troubleshoot-hybrid-join-windows-legacy.md
-    - name: Problemen met Enterprise State Roaming oplossen
-      href: enterprise-state-roaming-troubleshooting.md
+    - name: Problemen met apparaatidentiteiten oplossen
+      items:
+        - name: Problemen oplossen met apparaten die deel uitmaken van een hybride Azure AD en werken met de huidige versie van Windows
+          href: troubleshoot-hybrid-join-windows-current.md
+        - name: Problemen oplossen met apparaten die deel uitmaken van een hybride Azure AD en werken met een oude versie van Windows
+          href: troubleshoot-hybrid-join-windows-legacy.md
+        - name: Problemen met Enterprise State Roaming oplossen
+          href: enterprise-state-roaming-troubleshooting.md
     - name: Veelgestelde vragen
-      href: faq.md
-    - name: Veelgestelde vragen over Enterprise State Roaming
-      href: enterprise-state-roaming-faqs.md
+      items:
+        - name: Veelgestelde vragen
+          href: faq.md
+        - name: Veelgestelde vragen over Enterprise State Roaming
+          href: enterprise-state-roaming-faqs.md
 - name: Naslaginformatie
   items:
     - name: GPO-instellingen voor Enterprise State Roaming
