--- a/articles/cognitive-services/Anomaly-Detector/toc.yml
+++ b/articles/cognitive-services/Anomaly-Detector/toc.yml
@@ -58,6 +58,8 @@
       href: 'https://aka.ms/adpricing'
     - name: Regionale beschikbaarheid
       href: 'https://aka.ms/adregion'
+    - name: Door gebruikers gegenereerde inhoud
+      href: user-generated-content.md
     - name: Word lid van de Anomaly Detector-adviesgroep van Microsoft Teams
       href: 'https://aka.ms/adadvisorsjoin'
     - name: Referentiearchitectuur voor de oplossing
