--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -121,6 +121,69 @@
         - name: Doorvoer voor containers en databases inrichten
           displayName: 'request units, RUs, RU, limits, database throughput, shared throughput, container throughput'
           href: set-throughput.md
+    - name: Naslaginformatie over SQL-query's
+      items:
+        - name: Aan de slag
+          displayName: 'sql query, query basics'
+          href: sql-query-getting-started.md
+        - name: Componenten
+          items:
+            - name: SELECT
+              displayName: 'select, select clause'
+              href: sql-query-select.md
+            - name: FROM
+              displayName: 'from, from clause'
+              href: sql-query-from.md
+            - name: WHERE
+              displayName: 'where, where clause'
+              href: sql-query-where.md
+            - name: ORDER BY
+              displayName: 'order by, order by clause'
+              href: sql-query-order-by.md
+            - name: OFFSET LIMIT
+              displayName: offset limit
+              href: sql-query-offset-limit.md
+        - name: Subquery
+          displayName: 'subquery, exists'
+          href: sql-query-subquery.md
+        - name: Samenvoegingen
+          displayName: join
+          href: sql-query-join.md
+        - name: Aliasing
+          displayName: 'alias, aliasing'
+          href: sql-query-aliasing.md
+        - name: Matrices en objecten
+          displayName: 'object and array creation, object and array'
+          href: sql-query-object-array.md
+        - name: Trefwoorden
+          displayName: 'keywords, distinct, between, in, top'
+          href: sql-query-keywords.md
+        - name: Operators
+          displayName: 'operators, operator, logical operators, equality, comparison'
+          href: sql-query-operators.md
+        - name: Scalaire expressies
+          displayName: 'scalar expressions, scalar'
+          href: sql-query-scalar-expressions.md
+        - name: Functions
+          items:
+            - name: Door de gebruiker gedefinieerde functies
+              displayName: 'functions, udf'
+              href: sql-query-udfs.md
+            - name: Aggregaties
+              displayName: 'functions, aggregate'
+              href: sql-query-aggregates.md
+            - name: Systeemfuncties
+              displayName: 'functions, system functions, built-in functions'
+              href: sql-query-system-functions.md
+        - name: Geparameteriseerde query
+          displayName: 'parameterized query, parameterized, parameter, parameters'
+          href: sql-query-parameterized-queries.md
+        - name: LINQ naar SQL
+          displayName: 'linq, .NET'
+          href: sql-query-linq-to-sql.md
+        - name: SQL-queryuitvoering
+          displayName: 'query performance, query execution'
+          href: sql-query-execution.md
     - name: Werken met een Azure Cosmos-account
       href: account-overview.md
     - name: Containers en items
@@ -128,12 +191,6 @@
         - name: 'Werken met databases, containers en items'
           displayName: 'collection, document'
           href: databases-containers-items.md
-        - name: Naslaginformatie over de SQL-taal
-          displayName: 'collection, document'
-          href: sql-api-query-reference.md
-        - name: Voorbeelden van SQL-query's
-          displayName: 'collection, document, order by, where, top, value, aggregate, between, scalar, join, count, contains'
-          href: how-to-sql-query.md
         - name: Documentgegevens modelleren
           displayName: document
           href: modeling-data.md
@@ -351,6 +408,8 @@
               href: connect-mongodb-account.md
             - name: Verbinding maken via Studio 3T
               href: mongodb-mongochef.md
+            - name: Verbinding maken via Compass
+              href: mongodb-compass.md
             - name: Verbinding maken via Robomongo
               href: mongodb-robomongo.md
             - name: Verbinding maken via Mongoose
@@ -548,9 +607,6 @@
           href: how-to-manage-indexing-policy.md
         - name: Unieke sleutels definiëren
           href: how-to-define-unique-keys.md
-        - name: Voorbeelden van geneste SQL-query's
-          displayName: 'subquery, exists'
-          href: how-to-sql-subquery.md
     - name: Aanbevolen procedures
       items:
         - name: Tips voor prestaties
@@ -712,7 +768,9 @@
     - name: REST-resourceprovider
       href: /rest/api/cosmos-db-resource-provider/
     - name: Resource Manager-sjabloon
-      href: /templates/microsoft.documentdb/allversions
+      href: /azure/templates/microsoft.documentdb/allversions
+    - name: Opmerkingen bij de release van de emulator
+      href: local-emulator-release-notes.md
 - name: Resources
   items:
     - name: Uw vaardigheden ontwikkelen met Microsoft Learn
