--- a/articles/data-factory/TOC.yml
+++ b/articles/data-factory/TOC.yml
@@ -548,8 +548,6 @@
           href: configure-bcdr-azure-ssis-integration-runtime.md
         - name: SSISDB-logboeken opschonen met taken voor Elastic Database
           href: how-to-clean-up-ssisdb-logs-with-elastic-jobs.md
-        - name: Problemen met het uitvoeren van pakketten in Azure-SSIS IR oplossen
-          href: ssis-integration-runtime-ssis-activity-faq.md
     - name: Triggers maken
       items:
         - name: Een trigger op basis van gebeurtenissen maken
@@ -572,6 +570,12 @@
           href: solution-template-delta-copy-with-control-table.md
         - name: Gegevens transformeren met Databricks
           href: solution-template-databricks-notebook.md
+    - name: Handleiding voor het oplossen van problemen
+      items:
+        - name: Problemen met activiteiten oplossen
+          href: data-factory-troubleshoot-guide.md
+        - name: Problemen met het uitvoeren van pakketten in Azure-SSIS IR oplossen
+          href: ssis-integration-runtime-ssis-activity-faq.md
 - name: Naslaginformatie
   items:
     - name: .NET
