--- a/articles/iot-accelerators/toc.yml
+++ b/articles/iot-accelerators/toc.yml
@@ -137,6 +137,8 @@
           href: overview-opc-twin.md
         - name: Wat is OPC Vault?
           href: overview-opc-vault.md
+        - name: Wat is OPC Publisher?
+          href: overview-opc-publisher.md
         - name: Wat is een verbonden factory?
           href: iot-accelerators-connected-factory-features.md
     - name: Snelstartgidsen
@@ -153,8 +155,6 @@
           items:
             - name: Het dashboard gebruiken
               href: iot-accelerators-connected-factory-dashboard.md
-            - name: De uitgever van OPC gebruiken
-              href: 'https://github.com/Azure/iot-edge-opc-publisher/blob/master/README.md'
             - name: De oplossingsversneller configureren
               href: iot-accelerators-connected-factory-configure.md
             - name: De oplossingsversneller aanpassen
@@ -177,6 +177,12 @@
                   href: howto-opc-vault-deploy-existing-client-server-communication.md
             - name: OPC Vault helemaal vanaf het begin implementeren
               href: howto-opc-vault-deploy-scratch.md
+        - name: OPC Publisher
+          items:
+            - name: OPC Publisher configureren
+              href: howto-opc-publisher-configure.md
+            - name: OPC Publisher uitvoeren
+              href: howto-opc-publisher-run.md
     - name: Resources
       items:
         - name: GitHub-opslagplaats
