--- a/articles/load-balancer/TOC.yml
+++ b/articles/load-balancer/TOC.yml
@@ -16,7 +16,7 @@
       href: quickstart-load-balancer-standard-public-portal.md
     - name: Een load balancer van het type Standard maken - Azure CLI
       href: quickstart-load-balancer-standard-public-cli.md
-    - name: Een Standard Load Balancer maken - Azure PowerShell
+    - name: Een load balancer van het type Standard maken - Azure PowerShell
       href: quickstart-create-standard-load-balancer-powershell.md
     - name: Een Standard Load Balancer maken - Azure Resource Manager-sjabloon
       displayName: ARM
@@ -188,6 +188,8 @@
       href: /learn/browse/?products=azure-virtual-machines
     - name: Azure-roadmap
       href: 'https://azure.microsoft.com/roadmap/?category=networking'
+    - name: Feedback over Azure Load Balancer
+      href: 'https://feedback.azure.com/forums/217313-networking/category/77467-load-balancing'
     - name: Prijzen
       href: 'https://azure.microsoft.com/pricing/details/load-balancer/'
     - name: Prijscalculator
