--- a/articles/machine-learning/service/toc.yml
+++ b/articles/machine-learning/service/toc.yml
@@ -106,6 +106,8 @@
       href: concept-accelerate-with-fpgas.md
     - name: ONNX en ONNX Runtime
       href: concept-onnx.md
+    - name: Bewaking van gegevensafwijking
+      href: concept-data-drift.md
     - name: Beveiliging
       items:
         - name: Overzicht van Enterprise-beveiliging
@@ -151,12 +153,6 @@
         - name: Gegevens verkennen
           displayName: 'data, eda, exploratory, analysis, etl, dataset, summary statistics, profile, explore, data preparation, dataprep'
           href: how-to-explore-prepare-data.md
-        - name: Versie & gegevensdefinities beheren
-          displayName: 'data, etl, dataset, data preparation, dataprep, version'
-          href: how-to-manage-dataset-definitions.md
-        - name: Momentopname van gegevens maken
-          displayName: 'snapshots, profile, summary statistics, data copy'
-          href: how-to-create-dataset-snapshots.md
         - name: Gegevens uit gegevensarchief ophalen
           displayName: blob get fileshare access storage
           href: how-to-access-data.md
@@ -178,12 +174,16 @@
           href: how-to-set-up-training-targets.md
         - name: Schattingen maken tijdens training
           href: how-to-train-ml-models.md
+        - name: Scikit-learn gebruiken
+          href: how-to-train-scikit-learn.md
         - name: Tensorflow gebruiken
           href: how-to-train-tensorflow.md
         - name: Keras gebruiken
           href: how-to-train-keras.md
         - name: PyTorch gebruiken
           href: how-to-train-pytorch.md
+        - name: Chainer gebruiken
+          href: how-to-train-chainer.md
         - name: Hyperparameters afstemmen
           displayName: parameter
           href: how-to-tune-hyperparameters.md
@@ -211,6 +211,8 @@
         - name: Automatisch een prognosemodel trainen
           displayName: time series
           href: how-to-auto-train-forecast.md
+        - name: Metrische gegevens over nauwkeurigheid weergeven
+          href: how-to-understand-accuracy-metrics.md
     - name: Modellen implementeren & bedienen
       items:
         - name: Waar en hoe u implementeert
@@ -224,6 +226,9 @@
           href: /azure/iot-edge/tutorial-deploy-machine-learning?context=azure/machine-learning/service/context/ml-context
         - name: Aangepaste Docker-afbeelding
           href: how-to-deploy-custom-docker-image.md
+        - name: Bestaande modellen implementeren
+          displayName: publish existing model
+          href: how-to-deploy-existing-model.md
         - name: Problemen oplossen
           href: how-to-troubleshoot-deployment.md
     - name: Webservices gebruiken
@@ -239,6 +244,8 @@
         - name: Modelgegevens verzamelen en evalueren
           displayName: track production
           href: how-to-enable-data-collection.md
+        - name: Gegevensafwijkingen detecteren
+          href: how-to-monitor-data-drift.md
         - name: Controleren met behulp van Application Insights
           href: how-to-enable-app-insights.md
     - name: Herbruikbare werkstromen maken
