--- a/articles/search/TOC.yml
+++ b/articles/search/TOC.yml
@@ -16,17 +16,11 @@
         - name: Verrijken met AI (cognitief zoeken)
           href: cognitive-search-quickstart-blob.md
     - name: 'C#'
-      items:
-        - name: 1 - Een index maken
-          href: search-create-index-dotnet.md
-        - name: 2 - Gegevens laden
-          href: search-import-data-dotnet.md
-        - name: 3 - Een index doorzoeken
-          href: search-query-dotnet.md
+      href: search-get-started-dotnet.md
     - name: Postman
-      href: search-fiddler.md
+      href: search-get-started-postman.md
     - name: PowerShell
-      href: search-create-index-rest-api.md
+      href: search-get-started-powershell.md
     - name: Python
       href: search-get-started-python.md
 - name: Zelfstudies
@@ -39,10 +33,16 @@
           href: tutorial-csharp-paging.md
         - name: 3 - Automatisch aanvullen toevoegen
           href: tutorial-csharp-type-ahead-and-suggestions.md
+        - name: 4 - Facetten toevoegen
+          href: tutorial-csharp-facets.md
+        - name: 5 - Ordening van resultaten toevoegen
+          href: tutorial-csharp-orders.md
     - name: Azure SQL Database indexeren
       href: search-indexer-tutorial.md
     - name: Azure JSON-blobs indexeren
       href: search-semi-structured-data.md
+    - name: Meerdere Azure-gegevensbronnen indexeren
+      href: tutorial-multiple-data-sources.md
     - name: Verrijken met AI (cognitief zoeken)
       items:
         - name: 'C#'
