--- a/articles/virtual-network/toc.yml
+++ b/articles/virtual-network/toc.yml
@@ -363,6 +363,8 @@
       href: 'https://azure.microsoft.com/blog/topics/networking'
     - name: Netwerkforum
       href: 'https://social.msdn.microsoft.com/Forums/azure/home?forum=WAVirtualMachinesVirtualNetwork'
+    - name: Netwerkfeedback
+      href: 'https://feedback.azure.com/forums/217313-networking?category_id=77469'
     - name: Prijzen
       href: 'https://azure.microsoft.com/pricing/details/virtual-network'
     - name: Prijscalculator
