--- a/articles/cognitive-services/Anomaly-Detector/toc.yml
+++ b/articles/cognitive-services/Anomaly-Detector/toc.yml
@@ -8,7 +8,7 @@
 - name: Snelstartgidsen
   expanded: true
   items:
-    - name: Afwijkingen in uw gegevens detecteren
+    - name: REST-API
       items:
         - name: 'C# gebruiken'
           href: quickstarts/detect-data-anomalies-csharp.md
@@ -16,6 +16,12 @@
           href: quickstarts/detect-data-anomalies-java.md
         - name: Python gebruiken
           href: quickstarts/detect-data-anomalies-python.md
+    - name: SDK
+      items:
+        - name: 'C# gebruiken'
+          href: quickstarts/detect-data-anomalies-csharp-sdk.md
+        - name: Python gebruiken
+          href: quickstarts/detect-data-anomalies-python-sdk.md
 - name: Zelfstudies
   items:
     - name: Afwijkingen in batch visualiseren met behulp van Power BI
