--- a/articles/machine-learning/service/toc.yml
+++ b/articles/machine-learning/service/toc.yml
@@ -197,6 +197,9 @@
         - name: Experimenten bijhouden met MLflow
           displayName: 'log, monitor, metrics'
           href: how-to-use-mlflow.md
+        - name: Experimenten visualiseren met TensorBoard
+          displayName: 'log, monitor, metrics'
+          href: how-to-monitor-tensorboard.md
     - name: Machine learning automatiseren
       displayName: 'automl, auto ml'
       items:
@@ -304,6 +307,8 @@
               href: ../algorithm-module-reference/add-rows.md
             - name: Dubbele rijen verwijderen
               href: ../algorithm-module-reference/remove-duplicate-rows.md
+            - name: Gegevens samenvoegen
+              href: ../algorithm-module-reference/join-data.md
             - name: Gegevens splitsen
               href: ../algorithm-module-reference/split-data.md
             - name: Gegevens normaliseren
@@ -352,12 +357,14 @@
               href: ../algorithm-module-reference/two-class-support-vector-machine.md
             - name: K-means-clustering
               href: ../algorithm-module-reference/k-means-clustering.md
-        - name: Python-taalmodules
+        - name: Python- en R-taalmodules
           items:
             - name: Python-script uitvoeren
               href: ../algorithm-module-reference/execute-python-script.md
             - name: Python-model maken
               href: ../algorithm-module-reference/create-python-model.md
+            - name: R-Script uitvoeren
+              href: ../algorithm-module-reference/execute-r-script.md
         - name: Foutberichten & -codes
           href: ../algorithm-module-reference/machine-learning-module-error-codes.md
 - name: Resources
