--- a/articles/migrate/toc.yml
+++ b/articles/migrate/toc.yml
@@ -42,6 +42,8 @@
   items:
     - name: Veelgestelde vragen
       href: resources-faq.md
+    - name: Migratie in het Cloud Adoption Framework
+      href: 'https://docs.microsoft.com/azure/architecture/cloud-adoption/migrate/index'
     - name: REST-API
       href: 'https://docs.microsoft.com/rest/api/migrate/'
     - name: Resource Manager-sjabloon
