--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -460,10 +460,12 @@
               href: tutorial-query-graph.md
         - name: Handleidingen
           items:
-            - name: Grafiekgegevens importeren
-              href: bulk-executor-graph-dotnet.md
+            - name: Grafiekgegevens modelleren
+              href: graph-modeling.md
             - name: Grafiekgegevens partitioneren
               href: graph-partitioning.md
+            - name: Grafiekgegevens importeren
+              href: bulk-executor-graph-dotnet.md
             - name: Gremlin-query's optimaliseren
               href: graph-execution-profile.md
             - name: Spring-gegevens opslaan en beheren
