--- a/articles/hdinsight/interactive-query/TOC.yml
+++ b/articles/hdinsight/interactive-query/TOC.yml
@@ -24,6 +24,9 @@
       maintainContext: true
 - name: Procedures
   items:
+    - name: Hive-workloads migreren naar HDInsight 4.0
+      href: apache-hive-migrate-workloads.md
+      maintainContext: true
     - name: Clusteropslag gebruiken
       items:
         - name: Met behulp van Azure Storage
@@ -100,6 +103,9 @@
           href: ./apache-hadoop-connect-hive-power-bi-directquery.md
         - name: Power BI verbinden met Apache Hadoop
           href: ../hadoop/apache-hadoop-connect-hive-power-bi.md
+          maintainContext: true
+        - name: Query op Hive uitvoeren met PowerShell en ODBC
+          href: apache-hive-query-odbc-driver-powershell.md
           maintainContext: true
         - name: Excel verbinden met Apache Hadoop
           href: ../hadoop/apache-hadoop-connect-excel-hive-odbc-driver.md
@@ -333,11 +339,6 @@
         - name: Cluster-prestaties bewaken
           href: ../hdinsight-key-scenarios-to-monitor.md
           maintainContext: true
-- name: Procedures
-  items:
-    - name: Hive-workloads migreren naar HDInsight 4.0
-      href: apache-hive-migrate-workloads.md
-      maintainContext: true
 - name: Naslaginformatie
   items:
     - name: Codevoorbeelden
