--- a/articles/stream-analytics/TOC.yml
+++ b/articles/stream-analytics/TOC.yml
@@ -36,6 +36,8 @@
   items:
     - name: Een streaming analytics-technologie kiezen
       href: streaming-technologies.md
+    - name: Een hulpprogramma voor taakontwikkeling kiezen
+      href: feature-comparison.md
     - name: Invoertypen voor een taak
       items:
         - name: Overzicht van invoer
