--- a/articles/service-health/TOC.yml
+++ b/articles/service-health/TOC.yml
@@ -7,7 +7,7 @@
 - name: Snelstartgidsen
   items:
     - name: Waarschuwingen voor servicestatusgebeurtenissen configureren
-      href: ../azure-monitor/platform/alerts-activity-log-service-notifications.md?toc=%2fazure%2fservice-health%2ftoc.json
+      href: ../azure-monitor/platform/alerts-activity-log-service-notifications.md
 - name: Concepten
   items:
     - name: Azure-statuspagina
@@ -19,9 +19,9 @@
 - name: Procedures
   items:
     - name: Waarschuwingen voor servicestatusgebeurtenissen configureren
-      href: ../azure-monitor/platform/alerts-activity-log-service-notifications.md?toc=%2fazure%2fservice-health%2ftoc.json
+      href: alerts-activity-log-service-notifications.md
     - name: Servicestatusmeldingen bekijken met de Azure-portal
-      href: ../azure-monitor/platform/service-notifications.md?toc=%2fazure%2fservice-health%2ftoc.json
+      href: service-notifications.md
     - name: Waarschuwingen naar externe systemen verzenden via een webhook
       href: service-health-alert-webhook-guide.md
     - name: Waarschuwingen verzenden naar ServiceNow
